# lambeq-public

./: .gitignore  README.md  install.sh  pyproject.toml  setup.cfg
.github/workflows/: build_test.yml  docs.yml
discoket/: __init__.py  ansatz.py  circuit.py  diagram2circuit.py  reader.py  rewrite.py  split.py  tensor.py
discoket/ccg2diagram/: __init__.py  ccg_parser.py  ccg_tree.py  depccg_parser.py
discoket/ccg2discocat/: __init__.py  ccg_parser.py  ccg_rule.py  ccg_tree.py  ccg_types.py  ccgbank_parser.py  depccg_parser.py
discoket/core/: types.py
docs/: CONTRIBUTING.rst  clean_notebooks.py  cli.rst  conf.py  discoket.ccg2discocat.rst  discoket.core.rst  discoket.rst  glossary.rst  index.rst  installation.rst  lambeq.ccg2discocat.rst  lambeq.rewrite.rst  lambeq.training.rst  manual_training.rst  models.rst  nlp-data.rst  notebooks.rst  package-api.rst  parsing.rst  pipeline.rst  release-notes.rst  release_notes.rst  requirements.txt  root-api.rst  string_diagrams.rst  training.rst  troubleshooting.rst  uml-diagrams.rst  use-cases.rst
docs/_templates/: lambeq_landing_page.html
docs/examples/: ccg2discocat.ipynb  circuit.ipynb  classical-pipeline.ipynb  classical_pipeline.ipynb  dependency-reader.ipynb  doc_tutorial.ipynb  pennylane.ipynb  quantum-pipeline-jax.ipynb  quantum-pipeline.ipynb  quantum_pipeline.ipynb  quantum_pipeline_jax.ipynb  quantum_pipeline_tket.ipynb  reader.ipynb  rewrite.ipynb  rotosolve_optimizer.ipynb  tensor.ipynb  unk_words.ipynb
docs/puml/: rewrite.puml  text2diagram.puml  training.puml
docs/tutorials/: discocat.ipynb  extend-lambeq.ipynb  monoidal.ipynb  parameterise.ipynb  pennylane.ipynb  rewrite.ipynb  sentence-input.ipynb  trainer-classical.ipynb  trainer-hybrid.ipynb  trainer-quantum.ipynb  trainer_classical.ipynb  trainer_hybrid.ipynb  trainer_quantum.ipynb  training-symbols.ipynb  training-usecase.ipynb
examples/: ccg2discocat.ipynb  circuit.ipynb  classical_pipeline.ipynb  quantum_pipeline.ipynb  quantum_pipeline_emulation.ipynb  reader.ipynb  rewrite.ipynb  tensor.ipynb
lambeq/: __init__.py  circuit.py  cli.py  reader.py  rewrite.py  text_printer.py  tokeniser.py  typing.py
lambeq/ansatz/: __init__.py  base.py  circuit.py  (+1 more)
tests/: test_backend.py  test_circuit.py  test_cli.py  test_diagram2circuit.py  test_pregroups.py  test_reader.py  test_rewrite.py  test_split.py  test_tensor.py  test_text_printer.py  test_tokeniser.py
(+168 files in other folders)
