[metadata]
name = discoket
desciption = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = CQC QNLP team
author_email = ian.fan@cambridgequantum.com

[options]
packages = discoket, discoket.ccg2discocat, discoket.core
install_requires =
    depccg >= 1.1.0
    discopy
    pytket
    tensornetwork
python_requires = >=3.7

[options.extras_require]
all =
    coverage
    mypy
    pytest
    torch
