[metadata]
name = discoket
desciption = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = CQC QNLP team
author_email = ian.fan@cambridgequantum.com
license = Apache-2.0
license_files = file: LICENSE.md

[options]
packages = discoket, discoket.ccg2discocat, discoket.core
install_requires =
    depccg == 1.1.0
    discopy >= 0.3.6
    pytket >= 0.10.0
    tensornetwork

    chainer <= 6.0.0  # this is a hack to get pip to behave properly
python_requires = >=3.7

[options.extras_require]
test =
    coverage
    pytest
    torch
